<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    tools:context="com.company.ruta_a_tiempo_app.LoginActivity"
    android:background="#0074d9"
    android:theme="@style/AppTheme">

    <!-- Login progress -->


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0074d9">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/AppTheme">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="BIENVENIDO A RUTA@TIEMPO"
                android:id="@+id/textView2"
                android:textColor="#f0ffffff"
                android:textStyle="bold|normal"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                />
            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="30dp"
                android:id="@+id/imageView2"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/menuicon"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold|italic"
                    android:textColorHint="#ffffff"
                    android:theme="@style/AppTheme"

                    android:textAlignment="center"
                    android:gravity="center" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#ffffff"
                    android:textColor="#ffffff"
                    android:textColorHighlight="#ffffff"
                    android:textColorLink="#ffffff"
                    android:textStyle="bold|italic"
                    android:theme="@style/AppTheme"
                    android:textAlignment="center"
                    android:editable="false"
                    style="@style/AppTheme"
                    android:gravity="center" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="#6400559f"
                android:textColor="#e6ffffff" />

        </LinearLayout>



    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp">

        <TextView
            android:text="¿olvidaste tu contraseña?"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#e6ffffff"
            android:layout_marginTop="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#32ffffff"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:text="¿No tienes una cuenta? REGISTRATE."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#e6ffffff"
            android:layout_marginBottom="0dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#32ffffff"
            android:layout_marginBottom="0dp"
            android:visibility="invisible"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="¿No tienes una cuenta? REGISTRATE."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#e6ffffff"
            android:layout_gravity="bottom"
            android:visibility="invisible"/>







    </LinearLayout>

</LinearLayout>
